# train

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  index.md
docs/concepts/: benchmark_orchestration.md  simulation_loop.md
examples/: README.md  run_e2e.sh  run_end_to_end_training.py
examples/kit/: run_calibration_demo.py  run_evaluation_harness.py  run_trace_replay.py
scripts/: setup_dev.sh
src/xrtm/train/: __init__.py  metrics.py  real_e2e.py  version.py
src/xrtm/train/cli/: __init__.py
src/xrtm/train/core/: __init__.py
src/xrtm/train/core/eval/: __init__.py  calibration.py
src/xrtm/train/kit/: __init__.py
src/xrtm/train/kit/builders/: __init__.py
src/xrtm/train/kit/memory/: __init__.py  learner.py
src/xrtm/train/kit/optimization/: __init__.py  compiler.py
src/xrtm/train/kit/projectors/: __init__.py
src/xrtm/train/kit/trainers/: __init__.py
src/xrtm/train/providers/: __init__.py
src/xrtm/train/simulation/: artifacts.py  backtester.py  benchmark_artifacts.py  replayer.py  runner.py
tests/: conftest.py  test_backtester.py  test_calibration.py  test_cli.py  test_learner.py  test_metrics.py  test_optimization.py  test_real_benchmark_script.py  test_real_e2e.py  test_replayer.py  test_replayer_logging.py  test_runner.py  test_runner_unit.py  test_sample_builder.py  test_simulation_runner.py  test_single_node_trainer.py  test_train_benchmark_artifacts.py
tests/local/: test_offline_stack_e2e.py
