[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xrtm-train"
version = "0.2.0"
description = "The Learning/Optimization layer for XRTM."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "XRTM Team", email = "moy@xrtm.org"}
]
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "xrtm-data",
    "xrtm-eval>=0.1.2",
    "xrtm-forecast",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
gpu = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.7.0",
    "accelerate>=0.25.0",
]

[project.scripts]
xrtm-train = "xrtm.train.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"], include = ["xrtm*"], namespaces = true}}

[tool.uv.sources]
xrtm-data = { git = "https://github.com/xrtm-org/data.git", branch = "main" }
xrtm-eval = { git = "https://github.com/xrtm-org/eval.git", tag = "v0.2.1" }
xrtm-forecast = { git = "https://github.com/xrtm-org/forecast.git", tag = "v0.6.1" }

[tool.pytest.ini_options]
pythonpath = ["src", "../data/src", "../eval/src", "../forecast/src"]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".git", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
explicit_package_bases = true
exclude = ["build/", "dist/", "examples/"]
