[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xrtm-train"
version = "0.3.0"
description = "The Learning/Optimization layer for XRTM."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
authors = [
    {name = "XRTM Team", email = "moy@xrtm.org"}
]
dependencies = [
    "pydantic>=2.0.0",
    "xrtm-data>=0.2.7",
    "xrtm-eval>=0.2.7",
    "xrtm-forecast>=0.6.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"], include = ["xrtm*"], namespaces = true}}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
markers = [
    "local_llm: marks tests as requiring a local OpenAI-compatible LLM endpoint",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".git", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
explicit_package_bases = true
exclude = ["build/", "dist/", "examples/"]
